--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,10 @@ Version: 0.1.0
 Author: Samira Sonfack, Sarah Eliko, Fatima-Zhara Aklila
 Maintainer: The package maintainer <samira.sonfack@ensiie.eu>
 Description: The package implements versions of DTW algorithms with dynamic programming.One naive version and one optimized to reduce time complexity.    The complexities of both approaches are simulated and compared  with application on financial data time series.
-License: MIT + file LICENSE
+License: MIT 
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 1.0.13)
+Imports: Rcpp (>= 1.0.13), ggplot2
 LinkingTo: Rcpp
 RoxygenNote: 7.3.3
-Imports : ggplot2
-Suggests : microbenchmark
+Suggests: microbenchmark
