--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: The package implements versions of DTW algorithms with dynamic prog
 License: MIT 
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 1.0.13), ggplot2
+Imports: Rcpp (>= 1.0.13), ggplot2, dplyr, tidyr, gridExtra
 LinkingTo: Rcpp
 RoxygenNote: 7.3.3
 Suggests: microbenchmark
